--- a/feedback/index.html
+++ b/feedback/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/Gujarat_Police_Logo_1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Feedback Form | Pratikriya</title>
   </head>
   <body>
     <div id="root"></div>
